[project]
name = "plantvillage-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "matplotlib>=3.11.0",
    "numpy>=2.4.4",
    "opencv-python>=5.0.0.93",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "pyyaml>=6.0.3",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.9.0",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "tqdm>=4.66.5",
    "ultralytics>=8.4.88",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu126"
